[gd_scene load_steps=13 format=3 uid="uid://bnwsqqtdmwhtu"]

[ext_resource type="Environment" uid="uid://qsko45wpxerg" path="res://Maps/default_env.tres" id="1_7h7du"]
[ext_resource type="Script" path="res://Maps/main.gd" id="1_rvsng"]
[ext_resource type="Material" uid="uid://bf6te7t23qtp3" path="res://Maps/GridMat.tres" id="3_27oba"]
[ext_resource type="Script" path="res://Interactable/Light/InteractableLight.gd" id="4_kyyln"]
[ext_resource type="PackedScene" uid="uid://cstt3dvkbfulu" path="res://3DObjects/Apple/Apple.tscn" id="6_aiuj0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2afi4"]

[sub_resource type="BoxMesh" id="BoxMesh_n4eeh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cpp0l"]
albedo_color = Color(1, 0.0235294, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jwhxk"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_5twjj"]
points = PackedVector3Array(1, 1, 1, 1, 1, -1, -1, 1, 1, 1, -1, 1, 1, -1, -1, -1, 1, -1, -1, -1, 1, -1, -1, -1)

[sub_resource type="SphereMesh" id="SphereMesh_frhet"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tx2qg"]
albedo_color = Color(1, 0.223529, 0.278431, 1)

[node name="Node" type="Node"]
script = ExtResource( "1_rvsng" )

[node name="ListenServer" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -23.0
offset_right = -4.0
offset_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Listen Server
"

[node name="DServer" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 29.0
offset_right = -4.0
offset_bottom = 76.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Dedicated Server
"

[node name="Client" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -23.0
offset_right = 151.0
offset_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Client
"

[node name="IP_address" type="TextEdit" parent="Client"]
offset_top = 48.0
offset_right = 144.0
offset_bottom = 100.0
placeholder_text = "localhost"
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Singleplayer" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -85.0
offset_right = 75.0
offset_bottom = -38.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Singleplayer
"

[node name="MainMenu" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -47.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Main Menu"

[node name="PlayerSpawnLocation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.91311, 7.03314, 0)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player/Player.tscn")
spawn_path = NodePath("../PlayerSpawnLocation")
auto_spawn = true

[node name="light" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.84419, 1.95787, 16.7421)
collision_layer = 2
script = ExtResource( "4_kyyln" )
light = NodePath("../SpotLight3D")
on = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="light"]
shape = SubResource( "BoxShape3D_2afi4" )

[node name="MeshInstance3D" type="MeshInstance3D" parent="light/CollisionShape3D"]
layers = 2
mesh = SubResource( "BoxMesh_n4eeh" )
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource( "StandardMaterial3D_cpp0l" )

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.21105, 0.573563, 2.89924)
material_override = ExtResource( "3_27oba" )
gi_mode = 1
use_collision = true
size = Vector3(50, 2, 50)

[node name="CSGBox3D1" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31349, 2.97282, -22.5958)
gi_mode = 1
use_collision = true
size = Vector3(49.873, 3, 1)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31349, 2.97282, 28.4035)
gi_mode = 1
use_collision = true
size = Vector3(49.873, 3, 1)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(-0.00308923, 0, 0.999995, 0, 1, 0, -0.999995, 0, -0.00308923, 25.873, 2.97282, 2.67917)
gi_mode = 1
use_collision = true
size = Vector3(55, 3, 1)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(-0.00308923, 0, 0.999995, 0, 1, 0, -0.999995, 0, -0.00308923, -23.5016, 2.97282, 2.67917)
gi_mode = 1
use_collision = true
size = Vector3(55, 3, 1)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D5" type="CSGBox3D" parent="."]
transform = Transform3D(-0.843984, -0.536342, -0.0052146, -0.536332, 0.844001, -0.00331375, 0.00617843, -3.16889e-10, -0.99998, 10.3494, 1.99632, 1.41695)
gi_mode = 1
use_collision = true
size = Vector3(4.60107, 0.502591, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D7" type="CSGBox3D" parent="."]
transform = Transform3D(0.849607, 0.527317, -0.0102242, -0.527376, 0.849622, -0.004133, 0.00650729, 0.00890342, 0.999939, 18.6499, 2.07674, 1.42846)
gi_mode = 1
use_collision = true
size = Vector3(4.60107, 0.502591, 14.0192)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D6" type="CSGBox3D" parent="."]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, 14.4541, 3.1768, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(4.60107, 0.502591, 14.107)
material = ExtResource( "3_27oba" )

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.998819, 0.0194639, 0.0445193, -0.0467522, 0.634491, 0.771515, -0.0132304, -0.772685, 0.634652, -0.531392, 8.38026, -2.80088)
layers = 0
shadow_enabled = true

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.996865, 0.0791203, 0, -0.0791203, -0.996865, 0.789293, 2.01648, 14.7671)

[node name="Stairs" type="Node3D" parent="."]

[node name="CSGBox3D8" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -1.42272, 1.61775, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D9" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -1.80449, 1.74329, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D10" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -2.17758, 1.87023, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="@CSGBox3D10@19582" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -2.55936, 1.99577, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D11" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -2.8971, 2.11789, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="@CSGBox3D11@20746" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -3.27887, 2.24343, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="@CSGBox3D11@20747" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -3.65196, 2.37037, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D1019582" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -4.03373, 2.49591, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D12" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -4.41911, 2.62279, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="@CSGBox3D12@21676" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -4.80088, 2.74833, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="@CSGBox3D12@21677" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -5.17397, 2.87527, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D1019583" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -5.55574, 3.00081, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="@CSGBox3D12@21678" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -5.89349, 3.12293, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D1120746" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -6.27526, 3.24847, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="CSGBox3D1120747" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -6.64835, 3.37541, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="@CSGBox3D1019583@21679" type="CSGBox3D" parent="Stairs"]
transform = Transform3D(-0.999963, -0.00595152, -0.00617832, -0.0059514, 0.999982, -3.67712e-05, 0.00617843, 0, -0.99998, -7.03012, 3.50095, 1.38929)
gi_mode = 1
use_collision = true
size = Vector3(0.392448, 0.135761, 14.107)
material = ExtResource( "3_27oba" )

[node name="RigidDynamicBody3D" type="RigidDynamicBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.53539, 3.76665, 13.5922)
gravity_scale = -0.07

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidDynamicBody3D"]
gi_mode = 2
mesh = SubResource( "BoxMesh_jwhxk" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidDynamicBody3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource( "ConvexPolygonShape3D_5twjj" )

[node name="RigidDynamicBody3D2" type="RigidDynamicBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.11323, 5.04718, 13.5922)
mass = 0.01

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidDynamicBody3D2"]
gi_mode = 2
mesh = SubResource( "BoxMesh_jwhxk" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidDynamicBody3D2"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource( "ConvexPolygonShape3D_5twjj" )

[node name="RigidDynamicBody3D3" type="RigidDynamicBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.89079, 5.04718, 13.7933)
mass = 0.01

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidDynamicBody3D3"]
gi_mode = 2
mesh = SubResource( "BoxMesh_jwhxk" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidDynamicBody3D3"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource( "ConvexPolygonShape3D_5twjj" )

[node name="RigidDynamicBody3D4" type="RigidDynamicBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.51824, 6.10535, 13.6351)
mass = 0.01

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidDynamicBody3D4"]
gi_mode = 2
mesh = SubResource( "BoxMesh_jwhxk" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidDynamicBody3D4"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource( "ConvexPolygonShape3D_5twjj" )

[node name="RigidDynamicBody3D5" type="RigidDynamicBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.85594, 6.10535, 13.6351)
mass = 0.01

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidDynamicBody3D5"]
gi_mode = 2
mesh = SubResource( "BoxMesh_jwhxk" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidDynamicBody3D5"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource( "ConvexPolygonShape3D_5twjj" )

[node name="Apple" parent="." instance=ExtResource( "6_aiuj0" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.07152, 4.14037, 7.15481)

[node name="@Apple@40298" parent="." instance=ExtResource( "6_aiuj0" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5983, 4.14037, 7.57517)

[node name="@Apple@40303" parent="." instance=ExtResource( "6_aiuj0" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.64226, 4.14037, 7.48438)

[node name="@Apple@40308" parent="." instance=ExtResource( "6_aiuj0" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.31481, 4.14037, 7.25267)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( "1_7h7du" )

[node name="FogVolume" type="FogVolume" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.4926, 1.50598, 1.53421)
extents = Vector3(4.02019, 1.40863, 7.04964)

[node name="StopLocation" type="MeshInstance3D" parent="."]
transform = Transform3D(0.309258, 0, 0, 0, 0.309258, 0, 0, 0, 0.309258, 0, 2.47683, 0)
mesh = SubResource( "SphereMesh_frhet" )
surface_material_override/0 = SubResource( "StandardMaterial3D_tx2qg" )

[connection signal="pressed" from="ListenServer" to="." method="_on_server_pressed"]
[connection signal="pressed" from="DServer" to="." method="_on_d_server_pressed"]
[connection signal="pressed" from="Client" to="." method="_on_client_pressed"]
[connection signal="text_changed" from="Client/IP_address" to="." method="_on_ip_address_text_changed"]
[connection signal="pressed" from="Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
